--- a/css/header.css
+++ b/css/header.css
@@ -5,6 +5,7 @@
   fill: currentColor;
   transition: transform 0.3s ease;
   cursor: pointer;
+  background-color: white;
 }
 
 .icons:hover {
@@ -51,10 +52,13 @@
   position: absolute;
   right: 10px; /* Place it on the right */
 }
+/* Currently using display: none for simplicity. 
+ Change it to visibility and opacity for smooth transitions when ready.*/
 
 #searchBar {
   display: none;
   width: 70%; /* Hide initially */
+  margin-right: -30PX;
 }
 
 /* Media queries for smaller screens (320px to 375px) */
