--- a/css/header.css
+++ b/css/header.css
@@ -77,6 +77,7 @@ header {
   top: 0;  /* The header will stick to the top of the viewport */
   z-index: 1000; /* Ensures the header stays above other content */
   background-color: white; /* You can set the background color to prevent overlap with content */
+  border-bottom: thin solid #ccc;
 }
 
 /*for atleast 768px screen size*/
@@ -155,7 +156,7 @@ header {
   background-color: #f4f4f4;
   position: fixed;
   left: 0;
-  top: 130px;
+  top: 120px;
   transition: transform 0.3s ease;
   transform: translateX(0); /* Visible by default */
   z-index: 1000;
@@ -171,7 +172,7 @@ header {
 /* Toggle button */
 .menu-toggle {
   position: fixed;
-  top: 130px;
+  top: 110px;
   left: 20px;
   z-index: 1100;
   background: none;
