--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -3,11 +3,11 @@
     position: fixed;
     left: 0;
     top: 0;
+    bottom: 0;
+    background-color: white;
+    border-right: thin solid #ddd;
     width: 250px; /* Adjust size as needed */
-    height: 100%;
-    background-color: #f4f4f4;
-    box-shadow: 2px 0px 5px rgba(0, 0, 0, 0.1);
-    padding-top: 20px;
+    padding-top: 170px;
   }
   
   .sidebar-top {
@@ -43,15 +43,14 @@
   }
   
   .feedback-btn {
-    width: 100%;
-    padding: 12px;
+    padding:4px 8px;
     border: thin solid #ddd;
+    background-color: white;
     border-radius: 5px;
     cursor: pointer;
   }
   
-  .feedback-btn:hover {
-    background-color: #1A1A1A;
-    color: white;
+  .feedback-btn:active {
+    scale: 1.1;
   }
   
