--- a/css/header.css
+++ b/css/header.css
@@ -90,7 +90,8 @@ header {
 @media (max-width: 767px) {
   #searchBar {
     display: none; /* Hide search bar on smaller screens initially */
-    width: 80%;
+    width: 70%;
+    margin-left: 5%;
     margin-left: 5%;
   }
 
