--- a/css/question.css
+++ b/css/question.css
@@ -74,6 +74,9 @@ select {
     border-radius: 5px;
     background-color: #f9f9f9;
 }
+select:focus{
+    outline: none;
+}
 label {
     font-size: 18px;
     margin-bottom: 10px;
