--- a/css/signup.css
+++ b/css/signup.css
@@ -44,7 +44,6 @@ form {
     gap: 20px;
     margin-bottom: 15px;
 }
-
 .input-row input[type="text"],
 .input-row input[type="email"],
 .input-row input[type="password"] {
@@ -99,4 +98,64 @@ button#submit:hover {
         font-size: 0.9rem;
         padding: 10px;
     }
+}
+
+#error-message {
+    color: red;
+    font-size: 14px;
+    margin-top: 10px;
+}
+
+/* Modal Styles */
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.modal-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    max-width: 600px;
+    width: 90%;
+    text-align: center;
+    overflow-y: auto;
+    max-height: 80%;
+}
+
+.close-button {
+    float: right;
+    font-size: 1.5rem;
+    cursor: pointer;
+}
+
+/* Course Categories */
+.category {
+    margin: 15px 0;
+}
+
+.category-title {
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+.course-list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.course-list li {
+    margin: 5px 0;
+}
+.course-list li label{
+    cursor: pointer;
 }
